모델 성능 테스트2

--- a/2.모델성능테스트.ipynb
+++ b/2.모델성능테스트.ipynb
@@ -525,6 +525,180 @@
    "source": [
     "compare_models()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d5b455d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = \"\"\"\n",
+    "당신은 주어진 입력을 바탕으로 인기 있는 소설을 작성하는 임무를 맡았습니다. 목표는 지정된 장르의 관행을 준수하면서 목표 독자층에게 어필하는 매력적이고 시장성 있는 이야기를 만드는 것입니다.\n",
+    "\n",
+    "<characters> \n",
+    "주인공: 지민, 27세 여성. IT 회사 직원이지만 비밀리에 초능력을 가지고 있음. 목표는 능력을 숨기며 평범한 삶을 사는 것.\n",
+    "남자 주인공: 준호, 30세 남성. 비밀 요원으로 초능력자들을 찾는 임무를 맡고 있음. 지민에게 끌리지만 의무와 감정 사이에서 갈등함.\n",
+    "적대자: 서진, 35세 여성. 초능력자들을 이용해 세계를 지배하려는 비밀 조직의 리더.\n",
+    "</characters>\n",
+    "\n",
+    "<plot> \n",
+    "지민의 능력이 우연히 드러나면서 준호의 주목을 받게 됨. 둘은 서로를 경계하다가 점점 가까워지지만, 서진의 조직이 지민을 노리면서 위험에 빠짐. 준호와 지민은 힘을 합쳐 조직에 맞서 싸우며 사랑에 빠짐.\n",
+    "</plot> \n",
+    "\n",
+    "<setting> \n",
+    "서울의 번화가. 현대적인 도시 풍경과 첨단 기술, 그리고 숨겨진 초능력 세계가 공존하는 곳.\n",
+    "</setting>\n",
+    "\n",
+    "<point_of_view>\n",
+    "3인칭 제한적 시점. 주로 지민과 준호의 관점에서 이야기를 전개.\n",
+    "</point_of_view>\n",
+    "\n",
+    "<conflict> \n",
+    "내적 갈등: 지민의 정체성 혼란, 준호의 의무와 감정 사이의 갈등\n",
+    "외적 갈등: 서진의 조직과의 대립, 사회의 편견과 두려움\n",
+    "</conflict> \n",
+    "\n",
+    "<theme> \n",
+    "진정한 자아 받아들이기, 신뢰와 사랑의 힘, 다름을 인정하는 사회\n",
+    "</theme>\n",
+    "\n",
+    "<structure> \n",
+    "3부 구조. 1부: 능력 발각과 만남, 2부: 관계 발전과 위기 고조, 3부: 최종 대결과 해결\n",
+    "</structure>\n",
+    "\n",
+    "<style> \n",
+    "현대적이고 감각적인 문체. 때로는 유머러스하게, 때로는 긴장감 있게 서술.\n",
+    "</style>\n",
+    "\n",
+    "<dialogue> \n",
+    "\"네 능력이 위험할 수 있어. 하지만 난 널 지키고 싶어.\" (준호)\n",
+    "\"내 능력은 저주가 아니야. 이젠 알아. 이건 내 일부야.\" (지민)\n",
+    "</dialogue>\n",
+    "\n",
+    "<description> \n",
+    "\"지민의 손끝에서 푸른 빛이 춤추듯 일렁였다. 준호의 눈이 휘둥그레졌다. 서울의 밤하늘보다 더 아름다운 광경이었다.\"\n",
+    "</description>\n",
+    "\n",
+    "<pacing> \n",
+    "잔잔한 일상 묘사와 긴박한 액션 신을 번갈아가며 독자의 흥미를 유지.\n",
+    "</pacing>\n",
+    "\n",
+    "위 소설의 구성 요소를 모두 활용해서 소설을 1부만 작성해주세요.\n",
+    "\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6929acf1",
+   "metadata": {},
+   "source": [
+    "temperature "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5fa7360f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = client.messages.create(\n",
+    "    model=\"claude-3-5-sonnet-20240620\",\n",
+    "    messages=[\n",
+    "        {\"role\": \"user\", \"content\": prompt},\n",
+    "    ],\n",
+    "    max_tokens=2048,\n",
+    "    temperature=0,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e61e8b10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(Markdown(response.content[0].text))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "8cc1ba67",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "제 1부: 숨겨진 능력, 예기치 못한 만남\n",
+       "\n",
+       "서울의 화려한 네온사인이 밤하늘을 수놓는 강남역 부근. 지민은 퇴근길 인파 속에서 한숨을 내쉬며 걸음을 재촉했다. 27년 동안 숨겨온 비밀이 무거운 짐처럼 그녀의 어깨를 짓눌렀다.\n",
+       "\n",
+       "\"오늘도 무사히 넘어갔어.\" 지민은 속으로 중얼거렸다.\n",
+       "\n",
+       "그녀의 손끝에서 미세하게 푸른 빛이 일렁였다가 사라졌다. 지민은 재빨리 주머니에 손을 넣었다. 아무도 보지 않았기를 바라며.\n",
+       "\n",
+       "그때였다. \n",
+       "\n",
+       "\"잠깐만요!\" \n",
+       "\n",
+       "낯선 남자의 목소리에 지민은 흠칫 놀랐다. 뒤돌아보니 훤칠한 키에 날카로운 눈매를 가진 남자가 그녀를 바라보고 있었다.\n",
+       "\n",
+       "\"혹시... 방금 뭔가 보셨나요?\" 남자가 조심스럽게 물었다.\n",
+       "\n",
+       "지민의 심장이 쿵쾅거렸다. '설마 들킨 건가?'\n",
+       "\n",
+       "\"무슨 말씀이신지 모르겠는데요.\" 지민은 침착함을 가장하며 대답했다.\n",
+       "\n",
+       "남자는 잠시 지민을 관찰하듯 바라보다가 미소를 지었다. \"아, 죄송합니다. 제"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "response = client.messages.create(\n",
+    "    model=\"claude-3-5-sonnet-20240620\",\n",
+    "    messages=[\n",
+    "        {\"role\": \"user\", \"content\": prompt},\n",
+    "    ],\n",
+    "    max_tokens=512,\n",
+    "    temperature=0,\n",
+    ")\n",
+    "display(Markdown(response.content[0].text))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d686e7d",
+   "metadata": {},
+   "source": [
+    "stop_sequences "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7aab4430",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = client.messages.create(\n",
+    "    model=\"claude-3-5-sonnet-20240620\",\n",
+    "    messages=[\n",
+    "        {\"role\": \"user\", \"content\": prompt},\n",
+    "    ],\n",
+    "    max_tokens=512,\n",
+    "    temperature=0,\n",
+    ")\n",
+    "display(Markdown(response.content[0].text))"
+   ]
   }
  ],
  "metadata": {
